feat(tower): complete 3v3 Progress Tower authoritative combat, UI/UX polish, flow validations and API documentation